Overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
   font-family: 'Libre Franklin', sans-serif;
   color: hsl(209, 33%, 12%);
   text-align: center;
+  overflow-x: hidden !important;
 }
 
 .wrapper{
